@@ -6,6 +6,7 @@ package config
 
 import (
 	"github.com/elastic/beats/v7/x-pack/elastic-agent/pkg/artifact"
+	"github.com/elastic/beats/v7/x-pack/elastic-agent/pkg/core/logger"
 	"github.com/elastic/beats/v7/x-pack/elastic-agent/pkg/core/plugin/process"
 	"github.com/elastic/beats/v7/x-pack/elastic-agent/pkg/core/plugin/retry"
 )
@@ -16,6 +17,7 @@ type Config struct {
 	RetryConfig   *retry.Config   `yaml:"retry" config:"retry"`
 
 	DownloadConfig *artifact.Config `yaml:"download" config:"download"`
+	LoggingConfig  *logger.Config   `yaml:"logging,omitempty" config:"logging,omitempty"`
 }
 
 // DefaultConfig creates a config with pre-set default values.
@@ -24,5 +26,6 @@ func DefaultConfig() *Config {
 		ProcessConfig:  process.DefaultConfig(),
 		RetryConfig:    retry.DefaultConfig(),
 		DownloadConfig: artifact.DefaultConfig(),
+		LoggingConfig:  logger.DefaultLoggingConfig(),
 	}
 }
